<resources>
    <string name="app_name">RogueLikeExample</string>
    <string name="stage">던전 %d 층</string>
    <string name="hp">%d/%d</string>
    <string name="exp">%d/%d</string>
    <string name="level">Lv. %d</string>
    <string name="tip1">Tip 1\n\n알고 계셧나요 ? 게임 내에서 저장 기능은 레벨과 현재 던전 층수만 저장됩니다 !</string>
    <string name="tip2">Tip 2\n\n상위 레벨의 몬스터를 잡기 위해서는 가능한 모든 몬스터를 잡고 넘어가시는게 좋아요 !</string>
    <string name="number">%d 개</string>
    <string name="status_power">공격력 : %d</string>
    <string name="status_level">레벨 : %d</string>
    <string name="status_hp">체력 : %d/%d</string>
    <string name="status_armor">방어력 : %d</string>
    <string name="status_exp">경험치 : %d/%d</string>
</resources>