<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_armor"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:adjustViewBounds="true"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_exp"
        app:srcCompat="@drawable/hero_bottom" />

    <ImageView
        android:id="@+id/iv_weapon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:clickable="false"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="무기"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_weapon"
        app:layout_constraintEnd_toEndOf="@+id/iv_weapon"
        app:layout_constraintStart_toStartOf="@+id/iv_weapon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="방어구"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_armor"
        app:layout_constraintEnd_toEndOf="@+id/iv_armor"
        app:layout_constraintStart_toStartOf="@+id/iv_armor" />

    <TextView
        android:id="@+id/tv_status_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/status_level"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/status_hp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_status_level"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_level" />

    <TextView
        android:id="@+id/tv_status_weapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/status_power"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_status_hp"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_hp" />


    <TextView
        android:id="@+id/tv_status_armor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/status_armor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_status_weapon"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_weapon" />

    <TextView
        android:id="@+id/tv_status_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/status_exp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_status_armor"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_armor" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="가방"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_status_exp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <androidx.recyclerview.widget.RecyclerView
        android:backgroundTint="@color/white"
        android:id="@+id/rv_bag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_notification_clear_all" />

</androidx.constraintlayout.widget.ConstraintLayout>